--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
                 <!-- Los primeros tres son para letras -->
                 <div class="placaCont">
                     <!-- onkeypress es para asegurarse de que solo se ingresen letras -->
-                    <input type="text" id="placaLetter1" onkeypress="return soloLetter(event)" maxlength="1"></input>
+                    <input type="text" id="placaLetter1" onkeypress="return soloLetter(event)" maxlength="1">
                 </div>
                 <div class="placaCont">
-                    <input type="text" id="placaLetter2" onkeypress="return soloLetter(event)" maxlength="1"></input>
+                    <input type="text" id="placaLetter2" onkeypress="return soloLetter(event)" maxlength="1">
                 </div>
                 <div class="placaCont">
-                    <input type="text" id="placaLetter3" onkeypress="return soloLetter(event)" maxlength="1"></input>
+                    <input type="text" id="placaLetter3" onkeypress="return soloLetter(event)" maxlength="1">
                 </div>
 
                 <!-- Estos son para los números de la placa -->
                 <div class="placaCont">
-                    <input type="text" id="placaNum1" onkeypress="return soloNum(event)" maxlength="1"></input>
+                    <input type="text" id="placaNum1" onkeypress="return soloNum(event)" maxlength="1">
                 </div>
                 <div class="placaCont">
-                    <input type="text" id="placaNum2" onkeypress="return soloNum(event)" maxlength="1"></input>
+                    <input type="text" id="placaNum2" onkeypress="return soloNum(event)" maxlength="1">
                 </div>
                 <div class="placaCont">
-                    <input type="text" id="placaNum3" onkeypress="return soloNum(event)" maxlength="1"></input>
+                    <input type="text" id="placaNum3" onkeypress="return soloNum(event)" maxlength="1">
                 </div>
                 <div class="placaCont">
-                    <input type="text" id="placaNum4" onkeypress="return soloNum(event)" maxlength="1"></input>
+                    <input type="text" id="placaNum4" onkeypress="return soloNum(event)" maxlength="1">
                 </div>
             </div>
 
@@ -54,7 +54,7 @@
             <div class="date_time">
                 <div class="dateCont">
                     <!-- Selector de fecha -->
-                    <input type="date" id="date" class="pickersDate"></input>
+                    <input type="date" id="date" class="pickersDate">
                 </div>
                 <div class="dateCont">
                     <!-- Botón para verificar el "Pico y Placa" basado en la info proporcionada -->
@@ -64,7 +64,7 @@
                 </div>
                 <div class="dateCont">
                     <!-- Selector de hora -->
-                    <input type="time" id="time" class="pickersDate"></input>
+                    <input type="time" id="time" class="pickersDate">
                 </div>
             </div>
 
